# server

./: .gitignore  CMakeLists.txt  README.md
client/: mysql.cc  mysqlbinlog.cc  mysqlcheck.c  mysqldump.c  mysqltest.cc
debian/: autobake-deb.sh
include/: m_ctype.h  my_crypt.h  my_static_privs.h  my_sys.h  service_versions.h
libmysqld/: CMakeLists.txt  libmysql.c
libservices/: CMakeLists.txt  encryption_rotation_service.c
man/: mysql.1  mysqldump.1
mysql-test/: CMakeLists.txt  mariadb-test-run.pl  mysql-test-run.pl
mysys/: charset.c  mf_iocache.c  mf_keycache.c  my_alloc.c  my_getopt.c
scripts/: CMakeLists.txt  fill_help_tables.sql  mysql_install_db.sh  mysql_secure_installation.sh  mysql_system_tables.sql  mysql_system_tables_fix.sql  mysql_to_mariadb.sql  mysqld_multi.sh  wsrep_sst_common.sh  wsrep_sst_mariabackup.sh  wsrep_sst_mysqldump.sh
sql/: CMakeLists.txt  datadict.cc  ddl_log.cc  ddl_log.h  encryption.cc  event_data_objects.cc  event_db_repository.cc  events.cc  field.cc  field.h  filesort.cc  ha_partition.cc  ha_partition.h  handler.cc  handler.h  item.cc  item.h  item_cmpfunc.cc  item_cmpfunc.h  item_create.cc  item_func.cc  item_func.h  item_geofunc.cc  item_geofunc.h  item_jsonfunc.cc  item_strfunc.cc  item_strfunc.h  item_subselect.cc  item_subselect.h  item_timefunc.cc  item_xmlfunc.cc  json_table.cc  lex.h  log.cc  log_event.cc  log_event.h  log_event_client.cc  log_event_server.cc  mdl.cc  mysqld.cc  (+77 more)
sql-common/: client.c
strings/: ctype-uca.c  ctype.c
tests/: grant.pl  mysql_client_test.c
tpool/: CMakeLists.txt  aio_liburing.cc
(+368 files in other folders)
